--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
@@ -18,6 +19,7 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0",
     "yorkie": "^2.0.0"
   },
   "lint-staged": {
