--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "eslint": "^8.13.0",
     "vee-validate": "^4.5.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
